--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.15.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
