--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "cra-template": "1.2.0",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.15.0",
