--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
